@@ -2,6 +2,7 @@
 Encoding=UTF-8
 Name=XChat IRC
 Comment[de]=IRC-Client
+Comment[es]=Aplicación de IRC
 Comment[fi]=IRC-sovellus
 Comment[fr]=Client IRC
 Comment[no]=IRC-klient
